# VDDP

./: .gitmodules  CMakeLists.txt  README.md  env-reproduce.yaml  env.yaml  environment.yml  req.txt
.github/ISSUE_TEMPLATE/: reproduction-report.md
logs/: .gitignore  README.md  external-kcy21.csv  external-vdbm.csv  vddgm.csv  vddlm-anal.csv  vddlm.csv  vrr.csv
scratch/: scratch.ipynb
scripts/: .gitignore  build.sh  check-conda-env.sh  export-conda-env.sh  main.sh  plot.sh  utils.py  vddgm.py  vddgm.sh  vddgmplot.py  vddlm-anal-plot.py  vddlm-anal.py  vddlm-anal.sh  vddlm.py  vddlm.sh  vddlmplot.py  vdlm.sh  vrr.py  vrr.sh  vrrcompplot.py  vrrdecompplot.py  vrrplot.py
src/: CMakeLists.txt  main-vddgm.cpp  main-vddlm.cpp  main-vdlm.cpp  main-vrr.cpp  main.cpp  poly-commit.cpp  poly-commit.hpp  polynomial.cpp  polynomial.hpp  proof.cpp  proof.hpp  timer.hpp  vddgm.cpp  vddgm.hpp  vddlm.cpp  vddlm.hpp  vdlm.cpp  vdlm.hpp  vrr.cpp  vrr.hpp
vdp/: CMakeLists.txt  polynomial.cpp  polynomial.hpp  prg.cpp  prg.hpp  prng.cpp  prng.hpp  proof.cpp  proof.hpp  utils.cpp  utils.hpp
